# voidwabi

./: .gitignore  .gitignore.tmp  Dockerfile  Git-Changes to fix  Procfile  README.md  build.sh  docker-compose.yml  ngrok.yml  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
.do/: app.yaml
.github/workflows/: build.yml  tauri-build.yml
backend/: .env.example  package.json
backend/data/business/: default-workspace.json
backend/src/: server.ts
docs/checkpoints/: 20260103-01.md
frontend/: .env.example  package-lock.json  package.json  run_tauri.bat  vite.config.ts  vite.config.ts.timestamp-1765859662847-4f2ab4308bb338.mjs
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
frontend/src-tauri/icons/: README.md
frontend/src/lib/: calling.ts  markdown.ts  notifications.ts  socket.ts  storage.ts  temp_edit.js  webrtc.ts
frontend/src/lib/business/: store.ts  sync.ts  theme.css  types.ts
frontend/src/lib/components/: AvatarEditor.svelte  CallModal.svelte  CallView.svelte  ChannelSidebar.svelte  Chat.svelte  ConfirmDialog.svelte  CreateDMModal.svelte  (+22 more)
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: manifest.json
frontend/static/uploads/: .gitkeep
pureref-connector/: README.md  index.js  package-lock.json  package.json  start-connector.bat
scripts/: convert-icon.js  setup-icons.js
static/: index.html
static/_app/: version.json
turn-server/: README.md  docker-compose.yml  turnserver.conf
(+120 files in other folders)
